# Computational-Geometry

./: README.md
ConvexHull/Source Code/src/: SceneConvexHull.cpp  SceneConvexHull.h
ConvexHull/Source Code/vs2015/: GeoLab_02.sln  GeoLab_02.vcxproj
ConvexHull/Source Code/vs2015/Debug/: vc141.idb
ConvexHull/Source Code/vs2015/Debug/GeoLab_0.E26DAB3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GeoLab_02-ConvexHull.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Delaunay triangulation/Source Code/src/: SceneTriangulation.cpp  SceneTriangulation.h
Delaunay triangulation/Source Code/vs2015/: GeoLab_04.sln  GeoLab_04.vcxproj  VVRFramework_DEBUG.props
Delaunay triangulation/Source Code/vs2015/Debug/: vc141.idb
Delaunay triangulation/Source Code/vs2015/Debug/GeoLab_0.9F52EFD4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GeoLab_04-Triangulation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Intersections/Project/src/: SceneIntersections.cpp  SceneIntersections.h
Intersections/Project/vs2015/: GeoLab_03.sln  GeoLab_03.vcxproj  VVRFramework_RELEASE.props
Intersections/Project/vs2015/Debug/: vc141.idb
Intersections/Project/vs2015/Debug/GeoLab_0.CC907F32.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GeoLab_03-Intersections.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
KDTree/Source Code/src/: CMakeLists.txt  SceneKDTrees.cpp  SceneKDTrees.h
KDTree/Source Code/vs2015/: GeoLab_07.sln  GeoLab_07.vcxproj
KDTree/Source Code/vs2015/Debug/: vc141.idb
KDTree/Source Code/vs2015/Debug/GeoLab_0.58446D98.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GeoLab_07-KDTrees.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Scene Mesh 3D/Source Code/src/: SceneMesh3D.cpp  SceneMesh3D.h  symmetriceigensolver3x3.h
Scene Mesh 3D/Source Code/vs2015/: GeoLab_06.sln  GeoLab_06.vcxproj
Scene Mesh 3D/Source Code/vs2015/Debug/: vc141.idb
Scene Mesh 3D/Source Code/vs2015/Debug/GeoLab_06-3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GeoLab_06-3D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
